error_utf8.txt
node : C:\Users\hitea\Antigravi
ty\Software Design Pratice\js\q
uiz_data.js:80
At line:1 char:1
+ node -c js/quiz_data.js > err
or.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo          :  
   NotSpecified: (C:\Users\hi  
  tea\...quiz_data.js:80:Str   
 ing) [], RemoteException
    + FullyQualifiedErrorId :  
   NativeCommandError
 
        ],\n        variant_mat
ch_results: {\n            "T02
": [
          ^

SyntaxError: Invalid or unexpec
ted token
    at wrapSafe (node:internal/
modules/cjs/loader:1743:18)
    at checkSyntax (node:intern
al/main/check_syntax:76:3)

Node.js v24.14.0
